--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,7 @@
 # Enable all actuator endpoints
 management.endpoints.web.exposure.include=*
-# Change actuator base path if required (default is `/actuator`)
+# Change actuator base path if required
 management.endpoints.web.base-path=/actuator
-
-# Enable H2 console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.datasource.platform = h2
 
 # R2DBC configuration
 spring.r2dbc.password=
@@ -14,9 +9,8 @@ spring.r2dbc.pool.enabled=true
 spring.r2dbc.pool.initial-size=5
 spring.r2dbc.pool.max-idle-time=30m
 spring.r2dbc.pool.max-size=20
-spring.r2dbc.url=r2dbc:h2:mem:///product;
+spring.r2dbc.url=r2dbc:mysql://localhost:3306/product
 spring.r2dbc.username=root
-spring.r2dbc.driver-class-name:org.h2.Driver
 
 # Logging configuration
 logging.level.org.springframework.r2dbc=DEBUG
