--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,32 @@
+# Spring application configuration
+spring.application.name=async-api-async-db
+
 # Enable all actuator endpoints
 management.endpoints.web.exposure.include=*
-# Change actuator base path if required
 management.endpoints.web.base-path=/actuator
 
-# R2DBC configuration
+
+# R2DBC configuration for PostgreSQL
+spring.r2dbc.url=r2dbc:postgresql://localhost:5432/Product?currentSchema=public
+spring.r2dbc.username=postgres
 spring.r2dbc.password=
-spring.r2dbc.pool.enabled=true
+spring.r2dbc.platform=postgresql
+spring.r2dbc.driver-class-name=org.postgresql.Driver
+
+# Connection pool settings
 spring.r2dbc.pool.initial-size=5
 spring.r2dbc.pool.max-idle-time=30m
 spring.r2dbc.pool.max-size=20
-spring.r2dbc.url=r2dbc:mysql://localhost:3306/product
-spring.r2dbc.username=root
 
 # Logging configuration
 logging.level.org.springframework.r2dbc=DEBUG
 
 # Server configuration
-server.error.include-stacktrace=never
+server.error.include-message=always
+server.error.include-binding-errors=always
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
 
-# Spring application configuration
-spring.application.name=async-api-async-db
 
 # Jackson serialization configuration
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
